# mcserver

./: CMakeLists.txt  LICENSE  README.md
man/: mcserver.1
man1/: mcserver.1
src/: config.h.in  manifest.c  manifest.h  mcserver.c  storage.c  storage.h
src/mcserver/: config.h.in  main.c  manifest.c  manifest.h  storage.c  storage.h  version.h
